fixed scrollbar, normal editing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,38 +15,20 @@ body {
     flex-direction: column;
 }
 
-p {
-    margin: .2rem 0;
-    padding: .2rem 1rem;
+main {
     width: 100vw;
-    overflow-wrap: break-word;
-}
-
-p:hover {
-    background-color: #222222;
+    height: 100vh;
+    overflow-y: scroll;
 }
 
 pre {
-    max-width: 36rem;
-    width: 100vw;
+    max-width: 100vw;
     outline: none;
     overflow-wrap: break-word;
-    white-space: pre-wrap
 }
 
-button {
-    cursor: pointer;
-    color: black;
-    border: none;
-    background: none;
-
-    padding: .2rem;
-    margin: .4rem;
-}
-
-.title-bar {    
-    background-color: aliceblue;
-    /*border-radius: .6rem .6rem 0 0;*/
+.title-bar {
+    background-color: #cce;
     height: 2rem;
     width: 100vw;
     display: flex;
@@ -57,6 +39,17 @@ button {
     -webkit-user-select: none;
     -webkit-app-region: drag;
 }
-.title-bar > * {
+
+.title-bar>* {
     -webkit-app-region: no-drag;
+}
+
+button {
+    cursor: pointer;
+    color: black;
+    border: none;
+    background: none;
+
+    padding: .2rem;
+    margin: .4rem;
 }
